runs/official/csb_sdlc_fix_haiku_20260303_163626/baseline-local-direct/2026-03-03__16-36-54/webclients-api-error-metrics-fix__WMpfUG8/verifier/test-stdout.txt
=== SWE-bench Pro Evaluation ===
Working directory: /app
Config file found at /tests/config.json
Instance ID: unknown
Base commit: unknown
Repo language: unknown
Git status:
fatal: detected dubious ownership in repository at '/app'
To add an exception for this directory, call:

	git config --global --add safe.directory /app
Not a git repository
Applying test patch to set up test environment...
Checking patch packages/metrics/tests/observeApiError.test.ts...
Applied patch packages/metrics/tests/observeApiError.test.ts cleanly.
Test patch applied successfully.
Running tests...
jest-haste-map: duplicate manual mock found: fileMock
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/fileMock.js
    * <rootDir>/packages/activation/__mocks__/fileMock.js

jest-haste-map: duplicate manual mock found: sieve
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/sieve.js
    * <rootDir>/packages/activation/__mocks__/sieve.js

jest-haste-map: duplicate manual mock found: styleMock
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/styleMock.js
    * <rootDir>/packages/activation/__mocks__/styleMock.js

jest-haste-map: duplicate manual mock found: fileMock
  The following files share their name; please delete one of them:
    * <rootDir>/packages/activation/__mocks__/fileMock.js
    * <rootDir>/packages/components/__mocks__/fileMock.js

jest-haste-map: duplicate manual mock found: pmcrypto
  The following files share their name; please delete one of them:
    * <rootDir>/packages/activation/__mocks__/pmcrypto.ts
    * <rootDir>/packages/components/__mocks__/pmcrypto.ts

jest-haste-map: duplicate manual mock found: styleMock
  The following files share their name; please delete one of them:
    * <rootDir>/packages/activation/__mocks__/styleMock.js
    * <rootDir>/packages/components/__mocks__/styleMock.js

jest-haste-map: duplicate manual mock found: sieve
  The following files share their name; please delete one of them:
    * <rootDir>/packages/activation/__mocks__/sieve.js
    * <rootDir>/packages/components/__mocks__/sieve.js

jest-haste-map: duplicate manual mock found: tabbable
  The following files share their name; please delete one of them:
    * <rootDir>/packages/activation/__mocks__/tabbable.js
    * <rootDir>/packages/components/__mocks__/tabbable.js

jest-haste-map: duplicate manual mock found: fileMock
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/fileMock.js
    * <rootDir>/applications/account/src/__mocks__/fileMock.js

jest-haste-map: duplicate manual mock found: sieve
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/sieve.js
    * <rootDir>/applications/account/src/__mocks__/sieve.js

jest-haste-map: duplicate manual mock found: styleMock
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/styleMock.js
    * <rootDir>/applications/account/src/__mocks__/styleMock.js

jest-haste-map: duplicate manual mock found: mdMock
  The following files share their name; please delete one of them:
    * <rootDir>/applications/calendar/src/__mocks__/mdMock.ts
    * <rootDir>/applications/mail/src/__mocks__/mdMock.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/@proton/srp.ts
    * <rootDir>/packages/activation/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/packages/activation/__mocks__/@proton/srp.ts
    * <rootDir>/packages/components/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/@proton/srp.ts
    * <rootDir>/applications/account/src/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/applications/account/src/__mocks__/@proton/srp.ts
    * <rootDir>/applications/calendar/src/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/applications/calendar/src/__mocks__/@proton/srp.ts
    * <rootDir>/applications/mail/src/__mocks__/@proton/srp.ts

FAIL packages/metrics/tests/observeApiError.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    SyntaxError: /app/packages/metrics/tests/observeApiError.test.ts: Missing semicolon. (1:31)

    > 1 | import observeApiError from '"'"'../lib/observeApiError'"'"';
        |                                ^
      2 |
      3 | const metricObserver = jest.fn();
      4 |

      at instantiate (node_modules/@babel/parser/src/parse-error/credentials.ts:62:21)
      at instantiate (node_modules/@babel/parser/src/parse-error.ts:60:12)
      at Parser.toParseError [as raise] (node_modules/@babel/parser/src/tokenizer/index.ts:1487:19)
      at Parser.raise [as semicolon] (node_modules/@babel/parser/src/parser/util.ts:138:10)
      at Parser.semicolon [as parseImportSourceAndAttributes] (node_modules/@babel/parser/src/parser/statement.ts:3110:10)
      at Parser.parseImportSourceAndAttributes [as parseImportSpecifiersAndAfter] (node_modules/@babel/parser/src/parser/statement.ts:3097:17)
      at Parser.parseImportSpecifiersAndAfter [as parseImport] (node_modules/@babel/parser/src/parser/statement.ts:3063:17)
      at Parser.parseImport [as parseStatementContent] (node_modules/@babel/parser/src/parser/statement.ts:601:25)
      at Parser.parseStatementContent [as parseStatementLike] (node_modules/@babel/parser/src/parser/statement.ts:430:17)
      at Parser.parseStatementLike [as parseModuleItem] (node_modules/@babel/parser/src/parser/statement.ts:367:17)
      at Parser.parseModuleItem [as parseBlockOrModuleBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1407:16)
      at Parser.parseBlockOrModuleBlockBody [as parseBlockBody] (node_modules/@babel/parser/src/parser/statement.ts:1381:10)
      at Parser.parseBlockBody [as parseProgram] (node_modules/@babel/parser/src/parser/statement.ts:226:10)
      at Parser.parseProgram [as parseTopLevel] (node_modules/@babel/parser/src/parser/statement.ts:208:25)
      at Parser.parseTopLevel [as parse] (node_modules/@babel/parser/src/parser/index.ts:45:10)
      at parse (node_modules/@babel/parser/src/index.ts:67:38)
      at parser (node_modules/@babel/core/src/parser/index.ts:28:19)
          at parser.next (<anonymous>)
      at normalizeFile (node_modules/@babel/core/src/transformation/normalize-file.ts:51:24)
          at normalizeFile.next (<anonymous>)
      at run (node_modules/@babel/core/src/transformation/index.ts:38:36)
          at run.next (<anonymous>)
      at transform (node_modules/@babel/core/src/transform.ts:29:20)
          at transform.next (<anonymous>)
      at evaluateSync (node_modules/gensync/index.js:251:28)
      at sync (node_modules/gensync/index.js:89:14)
      at fn (node_modules/@babel/core/src/errors/rewrite-stack-trace.ts:97:14)
      at transformSync (node_modules/@babel/core/src/transform.ts:66:52)
      at ScriptTransformer.transformSource (node_modules/@jest/transform/build/ScriptTransformer.js:542:31)
      at ScriptTransformer._transformAndBuildScript (node_modules/@jest/transform/build/ScriptTransformer.js:671:40)
      at ScriptTransformer.transform (node_modules/@jest/transform/build/ScriptTransformer.js:723:19)
          at runMicrotasks (<anonymous>)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.505 s
Ran all test suites matching /packages\/metrics\/tests\/observeApiError.test.ts|tests\/observeApiError.test.ts/i.
/tests/test.sh: line 157: 0
0: syntax error in expression (error token is "0")
